Agent query: When typing 'condition.code:e11', do you see a list of suggestions for Type 2 diabetes mellitus and related codes? Also, is the validation indicator now properly positioned on the left side of the search input?

--- a/static/css/htql-suggestions.css
+++ b/static/css/htql-suggestions.css
@@ -38,7 +38,8 @@
 .validation-indicator {
     cursor: help;
     position: absolute !important;
-    right: 10px !important;
+    left: 10px !important;  /* Change from right to left */
+    right: auto !important; /* Remove right positioning */
     top: 50% !important;
     transform: translateY(-50%) !important;
     width: 12px !important;
@@ -51,7 +52,7 @@
 }
 
 .input-group .form-control {
-    padding-right: 30px !important;
+    padding-left: 30px !important;  /* Change from padding-right */
 }
 
 .position-relative {
