Agent query: When typing 'condition.code:e11', do you see ICD-10 code suggestions with descriptions and proper formatting?

--- a/templates/admin/audit_logs.html
+++ b/templates/admin/audit_logs.html
@@ -60,7 +60,7 @@
                                 {% if log.action == 'search' %}
                                     <strong>Search Parameters:</strong><br>
                                     {{ log.after_value }}
-                                {% elif log.action in ['update', 'create'] %}
+                                {% elif log.action in ['update', 'create', 'edit'] %}
                                     {% if log.before_value %}
                                         <strong>Before:</strong><br>
                                         {{ log.before_value }}<br>
